--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.7"
 
 x-logging: &default-logging
   driver: "json-file"
@@ -113,8 +113,8 @@ services:
     container_name: redis
     ports:
       - 6379:6379
-    cpus: 0.5
-    mem_limit: 512m
+    # cpus: 0.5
+    # mem_limit: 512m
     logging: *default-logging
 
 volumes:
