--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "deploy": "git add . && git commit -m Build && git push",
+    "clean": "bash ./purge-all.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
